Init Main Page Tab Structure

--- a/ShareMyTaxi/src/pages/payment/payment.html
+++ b/ShareMyTaxi/src/pages/payment/payment.html
@@ -1,8 +1,7 @@
 <ion-header>
   <ion-navbar color="AppColor">
-    <ion-title>Home</ion-title>
+    <ion-title>Payment</ion-title>
 </ion-navbar>
-
 </ion-header>
 <ion-content padding>
 
