--- a/ShareMyTaxi/src/pages/profile/profile.html
+++ b/ShareMyTaxi/src/pages/profile/profile.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-navbar color="AppColor">
-    <ion-title>Home</ion-title>
+    <ion-title>Profile</ion-title>
 </ion-navbar>
-
 </ion-header>
+
+
 <ion-content padding>
 
 </ion-content>
