--- a/ShareMyTaxi/src/pages/share-ratio/share-ratio.html
+++ b/ShareMyTaxi/src/pages/share-ratio/share-ratio.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-navbar color="AppColor">
-    <ion-title>Home</ion-title>
-</ion-navbar>
+    <ion-title>Share Ratio</ion-title>
+  </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
-  
+
 </ion-content>
