--- a/ShareMyTaxi/src/pages/payment-history/payment-history.html
+++ b/ShareMyTaxi/src/pages/payment-history/payment-history.html
@@ -1,9 +1,12 @@
+
 <ion-header>
   <ion-navbar color="AppColor">
-    <ion-title>Home</ion-title>
-</ion-navbar>
+    <ion-title>Payment History</ion-title>
+  </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  
+
 </ion-content>
