--- a/ShareMyTaxi/src/pages/home/home.html
+++ b/ShareMyTaxi/src/pages/home/home.html
@@ -4,6 +4,16 @@
 </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  
+<ion-content>
+  <ion-row id="homeInputContainer">
+    <ion-item>
+      <ion-label fixed>From</ion-label>
+      <ion-input type="text" value=""></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label fixed>To</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-row>  
+  <div #map id="map"> </div>
 </ion-content>
