--- a/ShareMyTaxi/src/pages/payement-packages/payement-packages.html
+++ b/ShareMyTaxi/src/pages/payement-packages/payement-packages.html
@@ -6,27 +6,22 @@
 
 
 <ion-content class="card-background-page" padding>
+  
+  
   <ion-card>
-    <img src="travel.jpg"/>
-    <div class="card-title">São Paulo</div>
-    <div class="card-subtitle">41 Listings</div>
+    <ion-card-content>
+      <p>From: Kotte To: Malabe </p>
+      <p>Distance : 24KM<p>
+      <p>Time : 08:10 AM</p>
+      <p>Date : 2010-15-24</p>
+    </ion-card-content>
+    <ion-row no-padding>
+        <button ion-button clear small color="" icon-right>
+          <ion-icon name='card'></ion-icon>
+          1,500/=
+        </button>
+    </ion-row>
   </ion-card>
 
-  <ion-card>
-    <img src="travel.jpg"/>
-    <div class="card-title">Amsterdam</div>
-    <div class="card-subtitle">64 Listings</div>
-  </ion-card>
 
-  <ion-card>
-    <img src="travel.jpg"/>
-    <div class="card-title">San Francisco</div>
-    <div class="card-subtitle">72 Listings</div>
-  </ion-card>
-
-  <ion-card>
-    <img src="travel.jpg"/>
-    <div class="card-title">Madison</div>
-    <div class="card-subtitle">28 Listings</div>
-  </ion-card>
 </ion-content>
