--- a/ShareMyTaxi/src/index.html
+++ b/ShareMyTaxi/src/index.html
@@ -36,6 +36,8 @@
 
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlxK1_fXBaDgRxyVxwH3b-BYT_Ag-QaaI"></script
 
 </body>
 </html>
