--- a/ShareMyTaxi/src/pages/home/home.html
+++ b/ShareMyTaxi/src/pages/home/home.html
@@ -5,15 +5,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-row id="homeInputContainer">
+  <ion-row  id="homeInputContainer">
     <ion-item>
       <ion-label fixed>From</ion-label>
-      <ion-input type="text" value=""></ion-input>
+      <ion-input [(ngModel)]="homeMap.from" type="text" value=""></ion-input>      
     </ion-item>
     <ion-item>
       <ion-label fixed>To</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input [(ngModel)]="homeMap.to" type="text"></ion-input>
     </ion-item>
+      <button (click)="homeMapSearchBtn()" ion-button icon-right outline>Pick</button>
   </ion-row>  
   <div #map id="map"> </div>
 </ion-content>
