Map Route Pick Done 2

--- a/ShareMyTaxi/src/pages/payement-packages/payement-packages.html
+++ b/ShareMyTaxi/src/pages/payement-packages/payement-packages.html
@@ -5,23 +5,6 @@
 </ion-header>
 
 
-<ion-content class="card-background-page" padding>
-  
-  
-  <ion-card>
-    <ion-card-content>
-      <p>From: Kotte To: Malabe </p>
-      <p>Distance : 24KM<p>
-      <p>Time : 08:10 AM</p>
-      <p>Date : 2010-15-24</p>
-    </ion-card-content>
-    <ion-row no-padding>
-        <button ion-button clear small color="" icon-right>
-          <ion-icon name='card'></ion-icon>
-          1,500/=
-        </button>
-    </ion-row>
-  </ion-card>
-
+<ion-content  padding>
 
 </ion-content>
