--- a/ShareMyTaxi/src/pages/payment-history/payment-history.html
+++ b/ShareMyTaxi/src/pages/payment-history/payment-history.html
@@ -7,6 +7,24 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="card-background-page" padding>
+    <ion-card>
+    <ion-card-content>
+      <p>From: Kotte To: Malabe </p>
+      <p>Distance : 24KM<p>
+      <p>Time : 08:10 AM</p>
+      <p>Date : 2010-15-24</p>
+    </ion-card-content>
+    <ion-row no-padding>
+        <ion-col ion-col="10">
+          <button ion-button clear small color="" icon-right>
+          <ion-icon name='card'></ion-icon> 1,500/=
+        </button>
+        </ion-col>
+        <ion-col ion-col="2">
+          <button ion-button clear small danger>Delete</button>
+        </ion-col>
+    </ion-row>
+  </ion-card>
 
 </ion-content>
