menu and home background added

--- a/ShareMyTaxi/src/pages/general/general.html
+++ b/ShareMyTaxi/src/pages/general/general.html
@@ -5,14 +5,31 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>general</ion-title>
+  <ion-navbar color="AppColor">
+    <ion-title> Home </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
-
 </ion-header>
+<ion-content class="">
 
-
-<ion-content padding>
-
+  <div class="background-page">
+    <div style="" class="dot">
+      <div class="centraldot"></div>
+      <div class="wave"></div>
+      <div class="wave2"></div>
+    </div>
+    <div style="margin-left: -100px;" class="dot">
+      <div class="centraldot"></div>
+      <div class="wave"></div>
+      <div class="wave2"></div>
+    </div>
+    <div style="margin-left: -50px;" class="dot">
+      <div class="centraldot"></div>
+      <div class="wave"></div>
+      <div class="wave2"></div>
+    </div>
+  </div>
+  <h1>Achala </h1>
 </ion-content>
