Share View and drive views added fire base connected

--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -4,7 +4,11 @@
       <button ion-item menuClose (click)="openPage('Payment')">
         Payment
       </button>
+      <button ion-item menuClose (click)="openPage('DriverShareTabs')">
+        Driver Share Option
+      </button>
     </ion-list>
+
   </ion-content>
 
 </ion-menu>
