--- a/ShareMyTaxi/src/pages/share-home/share-home.html
+++ b/ShareMyTaxi/src/pages/share-home/share-home.html
@@ -6,13 +6,32 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>share-home</ion-title>
+  <ion-navbar color="AppColor">
+    <ion-title>Share</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-  <div #map id="map"> </div>
+  <div #maps id="map"></div>
+  <button  (click)="addBooking()" color="danger" ion-button full></button>
+  <div no-padding>
+    <ion-item>
+      <ion-avatar item-left>
+        <img src="http://www.betera.es/fileadmin/Archivos/Areas_tematicas/Mujer/LOGOS/logos_material_design/skype2512x512.png">
+      </ion-avatar>
+      <h2>Marty McFly</h2>
+    </ion-item>
+
+    <ion-item>
+      <span item-left ></span>
+      <span item-left>(2.6 mi)</span>
+      <button  color="danger" ion-button icon-left  item-right>
+        <ion-icon name="navigate"></ion-icon>
+        Join
+      </button>
+    </ion-item>
+  </div>
+
 </ion-content>
