--- a/ShareMyTaxi/src/pages/driver-share-ride/driver-share-ride.html
+++ b/ShareMyTaxi/src/pages/driver-share-ride/driver-share-ride.html
@@ -1,7 +1,20 @@
 <ion-header>
-
+  <ion-navbar color="AppColor">
+    <ion-title></ion-title>
+  </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <h1>Hellow am drive share</h1>
+
+  <ion-card>
+    <ion-card-header>
+      Explore Nearby
+    </ion-card-header>
+    <ion-list>
+      <button ion-item>
+        <ion-icon name="cart" item-left></ion-icon>
+        Shopping
+      </button>
+      </ion-list>
+  </ion-card>
 
 </ion-content>
