--- a/ShareMyTaxi/src/pages/driver-share-tabs/driver-share-tabs.html
+++ b/ShareMyTaxi/src/pages/driver-share-tabs/driver-share-tabs.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar color="AppColor">
-    <ion-title>Share Driver</ion-title>
+    <ion-title>Driver</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-tabs  color="AppColor">
