kansihakas part added

--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -5,7 +5,10 @@
         Payment
       </button>
       <button ion-item menuClose (click)="openPage('DriverShareTabs')">
-        Driver Share Option
+        Share|Driver
+      </button>
+      <button ion-item menuClose (click)="openPage('Profile')">
+        Profile
       </button>
     </ion-list>
 
