--- a/ShareMyTaxi/src/pages/share-home/share-home.html
+++ b/ShareMyTaxi/src/pages/share-home/share-home.html
@@ -15,23 +15,24 @@
 
 <ion-content>
   <div #maps id="map"></div>
-  
-  <button  (click)="addBooking()" color="danger" ion-button full></button>
+
+
   <div no-padding>
+    <button  (click)="addBooking()" color="danger" ion-button full>Book</button>
     <ion-item>
       <ion-avatar item-left>
         <img src="http://www.betera.es/fileadmin/Archivos/Areas_tematicas/Mujer/LOGOS/logos_material_design/skype2512x512.png">
       </ion-avatar>
-      <h2>Marty McFly</h2>
+      <h2>Test Value </h2>
     </ion-item>
 
     <ion-item>
       <span item-left ></span>
       <span item-left>(2.6 mi)</span>
-      <button  color="danger" ion-button icon-left  item-right>
+      <!--<button  color="danger" ion-button icon-left  item-right>
         <ion-icon name="navigate"></ion-icon>
         Join
-      </button>
+      </button> -->
     </ion-item>
   </div>
 
