Sigith Part Added

--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -10,6 +10,17 @@
       <button ion-item menuClose (click)="openPage('Profile')">
         Profile
       </button>
+      <button ion-item menuClose (click)="openPage('DriverPayment')">
+        payement | driver
+      </button>
+      <button ion-item menuClose (click)="openPage('Payment')">
+        Payment
+      </button>
+      <button ion-item menuClose (click)="openPage('PaymentShared')">
+        Payment Shared
+      </button>
+
+
     </ion-list>
 
   </ion-content>
