--- a/ShareMyTaxi/src/pages/pick-home/pick-home.html
+++ b/ShareMyTaxi/src/pages/pick-home/pick-home.html
@@ -56,8 +56,8 @@
         </ion-item>
         <ion-item>
           <ion-icon name="calendar" item-left large></ion-icon>
-           <h2>Date</h2> 
-          <ion-datetime displayFormat="MMM DD, YYYY HH:mm"></ion-datetime>
+           <h2>Date</h2>
+          <ion-datetime displayFormat="HH:mm"></ion-datetime>
         </ion-item>
         <ion-item>
           <span item-left>
