--- a/ShareMyTaxi/src/pages/payment/payment.html
+++ b/ShareMyTaxi/src/pages/payment/payment.html
@@ -1,16 +1,18 @@
+<!--
+  Generated template for the Payment page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
-  <ion-navbar color="AppColor">
-    <ion-title>Payment</ion-title>
-</ion-navbar>
+
+  <ion-navbar>
+    <ion-title>payment</ion-title>
+  </ion-navbar>
+
 </ion-header>
+
+
 <ion-content padding>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped(item.id)">
-      <ion-icon [name]="item.icon" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
-    </button>
-  </ion-list>
+
 </ion-content>
