My Part Done with views

--- a/ShareMyTaxi/src/pages/driver-share-tabs/driver-share-tabs.html
+++ b/ShareMyTaxi/src/pages/driver-share-tabs/driver-share-tabs.html
@@ -12,5 +12,5 @@
 <ion-tabs  color="AppColor">
   <ion-tab tabIcon="notifications" tabTitle="Upcoming" [root]="DriverShareRideUpcoming"></ion-tab>
   <ion-tab tabIcon="navigate" tabTitle="Selected" [root]="DriverShareRideSelected"></ion-tab>
-  <ion-tab tabIcon="globe" tabTitle="Al" [root]="DriverShareRide"></ion-tab>
+  <ion-tab tabIcon="globe" tabTitle="Notification" [root]="DriverShareRide"></ion-tab>
 </ion-tabs>
