--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -4,6 +4,9 @@
       <button ion-item menuClose (click)="openPage('Payment')">
         Payment
       </button>
+      <button ion-item menuClose (click)="openPage('PickRide')">
+        Pick|Driver
+      </button>
       <button ion-item menuClose (click)="openPage('DriverShareTabs')">
         Share|Driver
       </button>
