--- a/ShareMyTaxi/src/pages/driver-share-tabs/driver-share-tabs.html
+++ b/ShareMyTaxi/src/pages/driver-share-tabs/driver-share-tabs.html
@@ -11,6 +11,7 @@
 </ion-header>
 <ion-tabs  color="AppColor">
   <ion-tab tabIcon="notifications" tabTitle="Upcoming" [root]="DriverShareRideUpcoming"></ion-tab>
+  <!--
   <ion-tab tabIcon="navigate" tabTitle="Selected" [root]="DriverShareRideSelected"></ion-tab>
-  <ion-tab tabIcon="globe" tabTitle="Notification" [root]="DriverShareRide"></ion-tab>
+  <ion-tab tabIcon="globe" tabTitle="Notification" [root]="DriverShareRide"></ion-tab>-->
 </ion-tabs>
