--- a/ShareMyTaxi/src/pages/active-share-ride/active-share-ride.html
+++ b/ShareMyTaxi/src/pages/active-share-ride/active-share-ride.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar  color="AppColor">
-    <ion-title>Active Share Ride </ion-title>
+    <ion-title>Active Ride </ion-title>
   </ion-navbar>
 
 </ion-header>
