--- a/ShareMyTaxi/src/pages/profile-home/profile-home.html
+++ b/ShareMyTaxi/src/pages/profile-home/profile-home.html
@@ -46,5 +46,6 @@
       <p>Test</p>
     </ion-col>
   </ion-row>
+    <button (click)="logout()" ion-button  color="danger" full>Log Out</button>
 </ion-card>
 </ion-content>
