--- a/ShareMyTaxi/src/pages/register/register.html
+++ b/ShareMyTaxi/src/pages/register/register.html
@@ -1,7 +1,7 @@
 
 <ion-header>
 
-  <ion-navbar color="AppColor">
+  <ion-navbar color="navColour">
     <ion-title>register</ion-title>
   </ion-navbar>
 
@@ -34,8 +34,8 @@
               <ion-option value="f" selected="true">Female</ion-option>
               <ion-option value="m">Male</ion-option>
             </ion-select>
-          </ion-item>  
-          
+          </ion-item>
+
           </ion-list>
         </ion-col>
       </ion-row>
