--- a/ShareMyTaxi/src/pages/driver-share-ride-upcoming/driver-share-ride-upcoming.html
+++ b/ShareMyTaxi/src/pages/driver-share-ride-upcoming/driver-share-ride-upcoming.html
@@ -16,23 +16,23 @@
   <ion-searchbar>
   
 </ion-searchbar>
-   <ion-card  *ngFor="let shareRide of ShareRides  | async" >    
+   <ion-card  *ngFor="let shareRide of ShareRides" >    
       <div no-padding>
         <ion-item>
           <span item-left>From :</span>
-          <span item-left>{{ shareRide.primary_from }}</span>          
+          <span item-left>{{ shareRide.primary.from }}</span>          
         </ion-item>
         <ion-item>
           <span item-left>To :</span>
-          <span item-left>{{ shareRide.primary_to }}</span>
+          <span item-left>{{ shareRide.primary.to }}</span>
         </ion-item>
         <ion-item>
           <span item-left >Distance: </span>
-          <span item-left>{{ shareRide.primary_distance }}</span>        
+          <span item-left>{{ shareRide.primary.distance }}</span>        
         </ion-item>
         <ion-item>
           <span item-left>Duration :</span>
-          <span item-left>{{shareRide.primary_duration}}</span>  
+          <span item-left>{{shareRide.primary.duration}}</span>  
         </ion-item> 
         <ion-item>
           <span item-left>Amount :</span>
