Build clean || Profile view Done and some minor changers in providers

--- a/ShareMyTaxi/src/pages/share-home/share-home.html
+++ b/ShareMyTaxi/src/pages/share-home/share-home.html
@@ -32,6 +32,11 @@
     </ion-card-header>
     <ion-list>
       <ion-item>
+        <ion-icon name="bicycle" item-left></ion-icon>
+        <span left>Distance : </span>
+        <span right> {{ passingValues.distance}}</span>
+      </ion-item>
+      <ion-item>
         <ion-icon name="cash" item-left></ion-icon>
         <span left>Cash : </span>
         <span right> {{ passingValues.amount}} /= </span>
