--- a/ShareMyTaxi/src/pages/profile-home/profile-home.html
+++ b/ShareMyTaxi/src/pages/profile-home/profile-home.html
@@ -14,36 +14,40 @@
 <ion-content>
   <ion-card>
 
-  <ion-item>
-    <ion-avatar item-left>
-      <img src="https://cdn1.iconfinder.com/data/icons/unique-round-blue/93/user-512.png">
-    </ion-avatar>
-    <h2>Marty McFly</h2>
-    <p>November 5, 1955</p>
+  <ion-item class="profile-header">
+      <ion-row>
+        <ion-col col-2></ion-col>
+        <ion-col col-8>
+          <img class="profile-header-img" src="{{profile.img}}">
+        </ion-col>
+        <ion-col col-2></ion-col>
+      </ion-row>
+    <h2>{{profile.username}}</h2>
+    <!--<p>November 5, 1955</p>-->
   </ion-item>
 
   <ion-row padding>
-    <ion-col col-6>
+    <ion-col col-4>
       <p> Username</p>
     </ion-col>
-    <ion-col col-6>
-      <p>Test</p>
+    <ion-col col-8>
+      <p>{{profile.username}}</p>
     </ion-col>
   </ion-row>
   <ion-row padding>
-    <ion-col col-6>
+    <ion-col col-4>
       <p> Email</p>
     </ion-col>
-    <ion-col col-6>
-      <p>Test</p>
+    <ion-col col-8>
+      <p>{{profile.email}}</p>
     </ion-col>
   </ion-row>
   <ion-row padding>
-    <ion-col col-6>
-      <p> Email</p>
+    <ion-col col-4>
+      <p> Type</p>
     </ion-col>
-    <ion-col col-6>
-      <p>Test</p>
+    <ion-col col-8>
+      <p>{{profile.user_type}}</p>
     </ion-col>
   </ion-row>
     <button (click)="logout()" ion-button  color="danger" full>Log Out</button>
