--- a/ShareMyTaxi/src/pages/login/login.html
+++ b/ShareMyTaxi/src/pages/login/login.html
@@ -2,7 +2,7 @@
   <ion-row class="logo-row animated bounceInLeft">
     <ion-col col-4></ion-col>
     <ion-col col-4>
-      <img (click)="aboutPage()"  src="https://scontent.fcmb1-1.fna.fbcdn.net/v/t1.0-9/17352499_1435482699829151_8588648477144115733_n.jpg?oh=13efa1ae29c9577e0a9a21352541d929&oe=599694CC"/>
+      <img (click)="aboutPage()"  src="assets/icon/appicon.png"/>
     </ion-col>
     <ion-col col-4></ion-col>
   </ion-row>
