--- a/ShareMyTaxi/src/pages/driver-map-view/driver-map-view.html
+++ b/ShareMyTaxi/src/pages/driver-map-view/driver-map-view.html
@@ -5,8 +5,8 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar color="AppColour">
-    <ion-title></ion-title>
+  <ion-navbar color="AppColor">
+    <ion-title> Confirmation </ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -14,7 +14,7 @@
 <ion-content>
   <div #map id="map"></div>
   <ion-card>
-  <button ion-button full color="danger">Comfirm</button>
+  <button (click)="allocateDriver()" ion-button full color="danger">Comfirm</button>
   <ion-card-header>
     Estimations Passenger 1
   </ion-card-header>
@@ -37,7 +37,7 @@
     <ion-item>
       <ion-icon name="alarm" item-left></ion-icon>
       <span left>
-        Time : 
+        Time :
       </span>
       <span right>
         {{ outData.pDuration }}
@@ -47,7 +47,7 @@
     <ion-item>
       <ion-icon name="contacts" item-left></ion-icon>
       <span left>
-        Type : 
+        Type :
       </span>
       <span right>
         Shared
@@ -77,7 +77,7 @@
     <ion-item>
       <ion-icon name="alarm" item-left></ion-icon>
       <span left>
-        Time : 
+        Time :
       </span>
       <span right>
         {{ outData.sDuration }}
@@ -87,7 +87,7 @@
     <ion-item>
       <ion-icon name="contacts" item-left></ion-icon>
       <span left>
-        Type : 
+        Type :
       </span>
       <span right>
         Shared
