--- a/ShareMyTaxi/src/pages/driver-share-ride-upcoming/driver-share-ride-upcoming.html
+++ b/ShareMyTaxi/src/pages/driver-share-ride-upcoming/driver-share-ride-upcoming.html
@@ -32,7 +32,7 @@
         </ion-item>
         <ion-item>
           <span item-left>Amount :</span>
-          <span item-left>{{shareRide.primary_distance_amount}}/=</span>
+          <span item-left>{{ shareRide.primary.amount_to_pay }}/=</span>
         </ion-item>
 
         <button (click)="onClick(shareRide)" ion-button full color="danger"> PICk </button>
