--- a/ShareMyTaxi/src/pages/main/main.html
+++ b/ShareMyTaxi/src/pages/main/main.html
@@ -22,6 +22,9 @@
       <button ion-item menuClose (click)="openPage('PaymentShared')">
         Payment Shared
       </button>
+      <button ion-item menuClose (click)="openPage('JoinShareRide')">
+        Join Share Ride
+      </button>
       <button ion-item menuClose (click)="openPage('test')">
         Test View
       </button>
