Join map veiw added testing to refresh error

--- a/ShareMyTaxi/src/pages/join-map-view/join-map-view.html
+++ b/ShareMyTaxi/src/pages/join-map-view/join-map-view.html
@@ -6,13 +6,55 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>join-map-view</ion-title>
+  <ion-navbar color="AppColor">
+    <ion-title>join Share Ride</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <div #map id="map"></div>
+   <ion-card id="input_field">    
+    <ion-list>
+      <ion-item>
+        <ion-avatar item-left>
+          <img src="img/avatar-cher.png">
+        </ion-avatar>
+        <h2>Achala Kavinda</h2>
+      </ion-item>
+      <ion-item>
+        <ion-icon item-left large name="bicycle"></ion-icon>
+        <span left>From : </span>
+        <span right>  </span>
+      </ion-item>
+      <ion-item>
+        <ion-icon item-left large name="bicycle"></ion-icon>
+        <span left>To : </span>
+        <span right>  </span>
+      </ion-item>
+      <ion-item>
+          <ion-icon item-left large name="analytics"></ion-icon>
+        <span left>Distance : </span>
+        <span right>  </span>
+      </ion-item>
+      <ion-item>
+        <ion-icon item-left large name="alarm"></ion-icon>
+        <span left>Duration : </span>
+        <span right>  </span>
+      </ion-item>
+      <ion-item>
+        <ion-icon item-left large name="logo-usd"></ion-icon>
+        <span left>Amount : </span>
+        <span right>  </span>
+      </ion-item>
+      <ion-item>
+        <ion-icon item-left large name="card"></ion-icon>
+        <span left>To Pay : </span>
+        <span right>  </span>
+      </ion-item>
 
+    </ion-list>
+    <button (click)="joinToRide()" ion-button full color="danger">Comfirm Join </button>
+</ion-card>
 </ion-content>
