Share Done some stufs remain to done

--- a/ShareMyTaxi/src/pages/active-share-ride/active-share-ride.html
+++ b/ShareMyTaxi/src/pages/active-share-ride/active-share-ride.html
@@ -41,7 +41,7 @@
     <ion-list>
       <ion-item>
         <ion-avatar item-left>
-          <img src="{{outData.pImg}}">
+          <img src="{{outData.sImg}}">
         </ion-avatar>
         <h2> Secondary : {{outData.sUsername}} </h2>
       </ion-item>  
